# VEGA

./: .gitignore  Dockerfile  README.md  README_test.md  config_manager.py  entrypoint.sh  example_config.yaml  pyproject.toml  run.py
agent/: agent.py
agent/prompts/: prompt_constructor.py
agent/prompts/jsons/: multimodal.json  p_multimodal_webrl_cot.json  p_webrl_chat.json  text_3shot.json
benchmmark_construction/: .gitignore  README.md  __init__.py  cli.py  env.example  prepare.sh  requirements.txt
benchmmark_construction/config/: config.yaml
benchmmark_construction/config/conf/: espocrm.yaml  firefly.yaml  itop.yaml  openproject.yaml  snipeit.yaml  veops_cmdb.yaml  zentao.yaml
benchmmark_construction/helper/: __init__.py  db_conn_factory.py  generate_webarena_task.py
benchmmark_construction/sample_outputs/: README.md
benchmmark_construction/sites/: .gitignore  bootstrap.md
benchmmark_construction/src/: __init__.py  generate_questions.py  task_factory.py  workflow_discovery.py
benchmmark_construction/workflow_output/: EspoCRM.json  Firefly.json  OpenProject.json  OpenProject_bak.json  SnipeIT.json  VeOps_CMDB.json  ZenTao.json  iTop.json
browser_env/: actions.py  helper_functions.py  processors.py  utils.py
evaluation_harness/: evaluators.py  helper_functions.py
llms/: utils.py
llms/providers/: api_utils.py  openai_utils.py  vllm_utils.py
reporting/: aggregator.py
runner/: core.py  models.py  site.py  utils.py
src/vega/: __main__.py  analysis.py  config.py
src/vega/agent/: agent.py
tests/: test_basic.py
utils/: utils.py
(+46 files in other folders)
